Ensure that logo is clickable on mobile

--- a/www/css/style.less
+++ b/www/css/style.less
@@ -240,9 +240,8 @@ body {
         float: left;
       }
       #nav {
-        position: relative;
-        top: 6px;
         float: left;
+        padding-top: 6px;
         a {
           font-size: 18px;
           color: #000;
